--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <!-- Template by html.am -->
 <html>
 	<head>
-		<meta http-equiv="refresh"
-content="<delay before redirecting>;
-URL=<www.ramonable.github.io/britishmuseum/main/index.html>">
+		
+<meta HTTP-EQUIV="REFRESH" content="0; url=http://www.ramonable.github.io/britishmuseum/main/index.html">
 </head>
 <body>
 </body>
