--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <!-- Template by html.am -->
 <html>
 	<head>
-		
-<meta HTTP-EQUIV="REFRESH" content="0; url=http://www.ramonable.github.io/britishmuseum/main/index.html">
+<meta HTTP-EQUIV="REFRESH" content="0; url=https://ramonable.github.io/britishmuseum/main/index.html">
 </head>
 <body>
 </body>
